--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -30,9 +30,9 @@ parameters:
 
     cors_allow_origin: http://localhost
 
-    jwt_private_key_path: %kernel.root_dir%/../var/jwt/private.pem   # ssh private key path
-    jwt_public_key_path:  %kernel.root_dir%/../var/jwt/public.pem    # ssh public key path
-    jwt_key_pass_phrase:  'coursiers'                                # ssh key pass phrase
+    jwt_private_key_path: '%kernel.root_dir%/../var/jwt/private.pem'   # ssh private key path
+    jwt_public_key_path:  '%kernel.root_dir%/../var/jwt/public.pem'    # ssh public key path
+    jwt_key_pass_phrase:  'coursiers'                                  # ssh key pass phrase
     jwt_token_ttl:        86400
 
     transactional_address: transactional@coopcycle.dev
